2.0.1   - Clarified RMin/RMax in IP Sweep.
		- Fixed an issue with Redirects overruling each other.
        - Dropped legacy IP entry in Distribution Status
        - Fixed an issue where hosts without blocks still had () appear in Rules.
2.0.0   - DSMS repurposed as The Machine. Now includes IP allocation, DNS management, reverse proxy management, 
          sudoers management, D-Shell, Icinga management and LDAP/Active Directory integration.
----------------
1.10.0  - Added feedback system for hosts writing their own sudoers files (Last Successful Deployment).
        - Banners are now suppressed during distribution to make stdout clearer.
----------------
1.9.0   - Added host auto-registration process.
        - Added 'Last Successful Transfer' to Distribution Status.
        - Added the ability to use DHCP clients.
        - Fixed an alignment bug in Hosts and Sudo Users.
----------------
1.8.1   - Correctly escaped special sudoers characters (:,=) when the sudoers file is built.
        - Prevent escapes being added to commands.
        - Fixed an issue with account modification time not being updated on change.
1.8.0   - Better error handling for failed SFTP connections.
        - Formatting fixes for Groups and Rules.
        - Command Alias accepted characters are now clearly defined in line with Hosts and Users.
        - Password complexity requirements are now configurable in common.pl.
        - System Status page implemented, which gives an overview of system settings and processes in 
          progress.
        - New distribution locking mechanism prevents two distribution processes running at the same time. 
          Distribution lock is in addition to the existing build process lock.
        - Items without notes now do not show an empty note table.
----------------
1.7.0   - Added Automated DSMS System deployment process.
        - Added the ability to allow some users read-only administrative rights.