@@ -2,6 +2,8 @@
 		- Fixed an issue with Redirects overruling each other.
         - Dropped legacy IP entry in Distribution Status
         - Fixed an issue where hosts without blocks still had () appear in Rules.
+        - Correctly handled broken fingerprint probe in D-Shell.
+        - Moved block discovery to common functions. Added block discovery to Jobs.
 2.0.0   - DSMS repurposed as The Machine. Now includes IP allocation, DNS management, reverse proxy management, 
           sudoers management, D-Shell, Icinga management and LDAP/Active Directory integration.
 ----------------
